# mea-pet-public

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MeaPet.spec  README.md  THIRD-PARTY-NOTICE.md  chat.py  config.example.json  config_checker.py  config_settings.json  linux_requirements.txt  live2d_widget.py  mea_memory.db  memory.py  pet.py  pet_live2d.py  pyproject.toml  setup_wizard.py  tts.py  vits_infer.py  vits_requirements.txt  watcher.py  启动桌宠.bat  打包发布.bat
.github/workflows/: python-app.yml
design-system/: MASTER.md
design-system/pages/: wizard.md
docs/: backend-and-control.md
meapet/: __init__.py  __main__.py  async_runtime.py  http_async.py  log.py  paths.py  ui_theme.py  utils.py
meapet/agent/: __init__.py  base.py  hermes.py  openclaw.py  presentation.py  prompts.py
meapet/chat/: __init__.py  engine.py
meapet/config/: __init__.py  checker.py  store.py
meapet/control/: broker.py  mcp_server.py  transport.py
meapet/conversation/: orchestrator.py  output_protocol.py  timeline.py
meapet/desktop/: __init__.py  app.py  audio.py  chat_flow.py  chat_input.py  config_bridge.py  control_bridge.py  splash.py  (+13 more)
scripts/: __init__.py  package_release.py
tests/: test_agent_chat_flow.py  test_agent_presentation.py  test_async_runtime.py  test_companion_control.py  test_companion_desktop_bridge.py  test_companion_mcp_security.py  test_conversation_timeline.py  test_core_fixes.py  test_coverage_boost.py  test_direct_protocols.py  test_hermes_adapter.py  test_http_async.py  test_live2d_startup.py  test_memory_advanced.py  test_mixin_contracts.py  test_module_split.py  test_openclaw_adapter.py  test_release_packaging.py  test_review_regressions.py  test_screen_capture.py  test_tts_language_routing.py  test_ui_refactor.py  test_vision_modes.py  test_wizard_agent_config.py
vits_models/: G_latest.pth  finetune_speaker.json
wizard/: __init__.py  app.py  env_utils.py  page_backend.py  page_env.py  page_key.py  page_llm.py  page_summary.py  page_tts.py  page_tts_gsv.py  page_tts_mimo.py  page_tts_vits.py  page_vision.py  pages.py  platform_info.py  styles.py
(+30 files in other folders)
